parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> start
Rule 2     start -> TkWith declaracionVar TkBegin cond TkEnd
Rule 3     start -> TkBegin cond TkEnd
Rule 4     start -> TkWith declaracionVar TkBegin TkEnd
Rule 5     start -> TkWith TkBegin TkEnd
Rule 6     start -> TkWith TkBegin cond TkEnd
Rule 7     start -> TkBegin TkEnd
Rule 8     declaracionVar -> TkVar declaracionId
Rule 9     declaracionVar -> TkVar declaracionArray
Rule 10    declaracionVar -> TkVar declaracionId declaracionVar
Rule 11    declaracionVar -> TkVar declaracionArray declaracionVar
Rule 12    declaracionId -> TkId TkComa declaracionId
Rule 13    declaracionId -> declaracionIdNum
Rule 14    declaracionId -> declaracionIdBool
Rule 15    declaracionId -> declaracionIdChar
Rule 16    declaracionIdNum -> TkId TkAsignacion TkNum TkComa declaracionIdNum
Rule 17    declaracionIdNum -> TkId TkAsignacion TkNum TkDosPuntos TkInt
Rule 18    declaracionIdNum -> TkId TkDosPuntos TkInt
Rule 19    declaracionIdChar -> TkId TkAsignacion TkCaracter TkComa declaracionIdChar
Rule 20    declaracionIdChar -> TkId TkAsignacion TkCaracter TkDosPuntos TkChar
Rule 21    declaracionIdChar -> TkId TkDosPuntos TkChar
Rule 22    declaracionIdBool -> TkId TkAsignacion TkTrue TkComa declaracionIdBool
Rule 23    declaracionIdBool -> TkId TkAsignacion TkTrue TkDosPuntos TkBool
Rule 24    declaracionIdBool -> TkId TkAsignacion TkFalse TkComa declaracionIdBool
Rule 25    declaracionIdBool -> TkId TkAsignacion TkFalse TkDosPuntos TkBool
Rule 26    declaracionIdBool -> TkId TkDosPuntos TkBool
Rule 27    declaracionArray -> TkId TkComa declaracionArray
Rule 28    declaracionArray -> TkId TkDosPuntos TkArray TkCorcheteAbre TkNum TkCorcheteCierra TkOf type
Rule 29    type -> TkInt
Rule 30    type -> TkChar
Rule 31    type -> TkBool
Rule 32    arrayaux -> TkNum
Rule 33    arrayaux -> TkNum TkComa TkNum
Rule 34    ingresarEnArreglo -> TkCorcheteAbre arrayaux TkCorcheteCierra ingresarEnArreglo
Rule 35    ingresarEnArreglo -> TkCorcheteAbre arrayaux TkCorcheteCierra
Rule 36    cond -> if
Rule 37    cond -> if cond
Rule 38    cond -> while
Rule 39    cond -> while cond
Rule 40    cond -> for cond
Rule 41    cond -> for
Rule 42    cond -> read
Rule 43    cond -> read cond
Rule 44    cond -> print
Rule 45    cond -> print cond
Rule 46    cond -> TkWith declaracionVar TkBegin cond TkEnd
Rule 47    cond -> TkWith declaracionVar TkBegin TkEnd
Rule 48    cond -> TkWith declaracionVar TkBegin cond TkEnd cond
Rule 49    cond -> TkWith TkBegin cond TkEnd
Rule 50    cond -> TkWith TkBegin TkEnd
Rule 51    cond -> TkId TkAsignacion exp TkPuntoComa
Rule 52    cond -> TkId TkAsignacion exp TkPuntoComa cond
Rule 53    cond -> TkId ingresarEnArreglo TkAsignacion exp TkPuntoComa
Rule 54    cond -> TkId ingresarEnArreglo TkAsignacion exp TkPuntoComa cond
Rule 55    if -> TkIf operacion TkHacer cond TkOtherwise TkHacer cond TkEnd
Rule 56    if -> TkIf operacion TkHacer cond TkEnd
Rule 57    while -> TkWhile operacion TkHacer cond TkEnd
Rule 58    for -> TkFor TkId TkFrom exp TkTo exp TkStep TkNum TkHacer cond TkEnd
Rule 59    for -> TkFor TkId TkFrom exp TkTo exp TkHacer cond TkEnd
Rule 60    read -> TkRead TkId TkPuntoComa
Rule 61    print -> TkPrint exp TkPuntoComa
Rule 62    exp -> operacion
Rule 63    operacion -> TkParAbre operacion TkParCierra
Rule 64    operacion -> operacion TkSuma operacion
Rule 65    operacion -> operacion TkResta operacion
Rule 66    operacion -> operacion TkMult operacion
Rule 67    operacion -> operacion TkDiv operacion
Rule 68    operacion -> operacion TkMod operacion
Rule 69    operacion -> TkId TkPunto TkNum
Rule 70    operacion -> TkMenos operacion
Rule 71    operacion -> operacion TkMenos operacion
Rule 72    operacion -> operacion TkConjuncion operacion
Rule 73    operacion -> operacion TkDisyuncion operacion
Rule 74    operacion -> operacion TkIgual operacion
Rule 75    operacion -> operacion TkDiferente operacion
Rule 76    operacion -> TkNegacion operacion
Rule 77    operacion -> operacion TkMenor operacion
Rule 78    operacion -> operacion TkMenorIgual operacion
Rule 79    operacion -> operacion TkMayor operacion
Rule 80    operacion -> operacion TkMayorIgual operacion
Rule 81    operacion -> operacion TkConcatenacion operacion
Rule 82    operacion -> TkShift operacion
Rule 83    operacion -> operacion ingresarEnArreglo
Rule 84    operacion -> operacion TkSiguienteCar
Rule 85    operacion -> operacion TkAnteriorCar
Rule 86    operacion -> TkValorAscii operacion
Rule 87    operacion -> TkId
Rule 88    operacion -> TkNum
Rule 89    operacion -> TkTrue
Rule 90    operacion -> TkFalse
Rule 91    operacion -> TkCaracter

Terminals, with rules where they appear

TkAnteriorCar        : 85
TkArray              : 28
TkAsignacion         : 16 17 19 20 22 23 24 25 51 52 53 54
TkBegin              : 2 3 4 5 6 7 46 47 48 49 50
TkBool               : 23 25 26 31
TkCaracter           : 19 20 91
TkChar               : 20 21 30
TkComa               : 12 16 19 22 24 27 33
TkConcatenacion      : 81
TkConjuncion         : 72
TkCorcheteAbre       : 28 34 35
TkCorcheteCierra     : 28 34 35
TkDiferente          : 75
TkDisyuncion         : 73
TkDiv                : 67
TkDosPuntos          : 17 18 20 21 23 25 26 28
TkEnd                : 2 3 4 5 6 7 46 47 48 49 50 55 56 57 58 59
TkFalse              : 24 25 90
TkFor                : 58 59
TkFrom               : 58 59
TkHacer              : 55 55 56 57 58 59
TkId                 : 12 16 17 18 19 20 21 22 23 24 25 26 27 28 51 52 53 54 58 59 60 69 87
TkIf                 : 55 56
TkIgual              : 74
TkInt                : 17 18 29
TkMayor              : 79
TkMayorIgual         : 80
TkMenor              : 77
TkMenorIgual         : 78
TkMenos              : 70 71
TkMod                : 68
TkMult               : 66
TkNegacion           : 76
TkNum                : 16 17 28 32 33 33 58 69 88
TkOf                 : 28
TkOtherwise          : 55
TkParAbre            : 63
TkParCierra          : 63
TkPrint              : 61
TkPunto              : 69
TkPuntoComa          : 51 52 53 54 60 61
TkRead               : 60
TkResta              : 65
TkShift              : 82
TkSiguienteCar       : 84
TkStep               : 58
TkSuma               : 64
TkTo                 : 58 59
TkTrue               : 22 23 89
TkValorAscii         : 86
TkVar                : 8 9 10 11
TkWhile              : 57
TkWith               : 2 4 5 6 46 47 48 49 50
error                : 

Nonterminals, with rules where they appear

arrayaux             : 34 35
cond                 : 2 3 6 37 39 40 43 45 46 48 48 49 52 54 55 55 56 57 58 59
declaracionArray     : 9 11 27
declaracionId        : 8 10 12
declaracionIdBool    : 14 22 24
declaracionIdChar    : 15 19
declaracionIdNum     : 13 16
declaracionVar       : 2 4 10 11 46 47 48
exp                  : 51 52 53 54 58 58 59 59 61
for                  : 40 41
if                   : 36 37
ingresarEnArreglo    : 34 53 54 83
operacion            : 55 56 57 62 63 64 64 65 65 66 66 67 67 68 68 70 71 71 72 72 73 73 74 74 75 75 76 77 77 78 78 79 79 80 80 81 81 82 83 84 85 86
print                : 44 45
program              : 0
read                 : 42 43
start                : 1
type                 : 28
while                : 38 39

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . start
    (2) start -> . TkWith declaracionVar TkBegin cond TkEnd
    (3) start -> . TkBegin cond TkEnd
    (4) start -> . TkWith declaracionVar TkBegin TkEnd
    (5) start -> . TkWith TkBegin TkEnd
    (6) start -> . TkWith TkBegin cond TkEnd
    (7) start -> . TkBegin TkEnd

    TkWith          shift and go to state 4
    TkBegin         shift and go to state 2

    start                          shift and go to state 3
    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (3) start -> TkBegin . cond TkEnd
    (7) start -> TkBegin . TkEnd
    (36) cond -> . if
    (37) cond -> . if cond
    (38) cond -> . while
    (39) cond -> . while cond
    (40) cond -> . for cond
    (41) cond -> . for
    (42) cond -> . read
    (43) cond -> . read cond
    (44) cond -> . print
    (45) cond -> . print cond
    (46) cond -> . TkWith declaracionVar TkBegin cond TkEnd
    (47) cond -> . TkWith declaracionVar TkBegin TkEnd
    (48) cond -> . TkWith declaracionVar TkBegin cond TkEnd cond
    (49) cond -> . TkWith TkBegin cond TkEnd
    (50) cond -> . TkWith TkBegin TkEnd
    (51) cond -> . TkId TkAsignacion exp TkPuntoComa
    (52) cond -> . TkId TkAsignacion exp TkPuntoComa cond
    (53) cond -> . TkId ingresarEnArreglo TkAsignacion exp TkPuntoComa
    (54) cond -> . TkId ingresarEnArreglo TkAsignacion exp TkPuntoComa cond
    (55) if -> . TkIf operacion TkHacer cond TkOtherwise TkHacer cond TkEnd
    (56) if -> . TkIf operacion TkHacer cond TkEnd
    (57) while -> . TkWhile operacion TkHacer cond TkEnd
    (58) for -> . TkFor TkId TkFrom exp TkTo exp TkStep TkNum TkHacer cond TkEnd
    (59) for -> . TkFor TkId TkFrom exp TkTo exp TkHacer cond TkEnd
    (60) read -> . TkRead TkId TkPuntoComa
    (61) print -> . TkPrint exp TkPuntoComa

    TkEnd           shift and go to state 11
    TkWith          shift and go to state 12
    TkId            shift and go to state 8
    TkIf            shift and go to state 16
    TkWhile         shift and go to state 7
    TkFor           shift and go to state 9
    TkRead          shift and go to state 10
    TkPrint         shift and go to state 6

    cond                           shift and go to state 5
    if                             shift and go to state 14
    for                            shift and go to state 13
    read                           shift and go to state 15
    print                          shift and go to state 17
    while                          shift and go to state 18

state 3

    (1) program -> start .

    $end            reduce using rule 1 (program -> start .)


state 4

    (2) start -> TkWith . declaracionVar TkBegin cond TkEnd
    (4) start -> TkWith . declaracionVar TkBegin TkEnd
    (5) start -> TkWith . TkBegin TkEnd
    (6) start -> TkWith . TkBegin cond TkEnd
    (8) declaracionVar -> . TkVar declaracionId
    (9) declaracionVar -> . TkVar declaracionArray
    (10) declaracionVar -> . TkVar declaracionId declaracionVar
    (11) declaracionVar -> . TkVar declaracionArray declaracionVar

    TkBegin         shift and go to state 20
    TkVar           shift and go to state 19

    declaracionVar                 shift and go to state 21

state 5

    (3) start -> TkBegin cond . TkEnd

    TkEnd           shift and go to state 22


state 6

    (61) print -> TkPrint . exp TkPuntoComa
    (62) exp -> . operacion
    (63) operacion -> . TkParAbre operacion TkParCierra
    (64) operacion -> . operacion TkSuma operacion
    (65) operacion -> . operacion TkResta operacion
    (66) operacion -> . operacion TkMult operacion
    (67) operacion -> . operacion TkDiv operacion
    (68) operacion -> . operacion TkMod operacion
    (69) operacion -> . TkId TkPunto TkNum
    (70) operacion -> . TkMenos operacion
    (71) operacion -> . operacion TkMenos operacion
    (72) operacion -> . operacion TkConjuncion operacion
    (73) operacion -> . operacion TkDisyuncion operacion
    (74) operacion -> . operacion TkIgual operacion
    (75) operacion -> . operacion TkDiferente operacion
    (76) operacion -> . TkNegacion operacion
    (77) operacion -> . operacion TkMenor operacion
    (78) operacion -> . operacion TkMenorIgual operacion
    (79) operacion -> . operacion TkMayor operacion
    (80) operacion -> . operacion TkMayorIgual operacion
    (81) operacion -> . operacion TkConcatenacion operacion
    (82) operacion -> . TkShift operacion
    (83) operacion -> . operacion ingresarEnArreglo
    (84) operacion -> . operacion TkSiguienteCar
    (85) operacion -> . operacion TkAnteriorCar
    (86) operacion -> . TkValorAscii operacion
    (87) operacion -> . TkId
    (88) operacion -> . TkNum
    (89) operacion -> . TkTrue
    (90) operacion -> . TkFalse
    (91) operacion -> . TkCaracter

    TkParAbre       shift and go to state 32
    TkId            shift and go to state 33
    TkMenos         shift and go to state 23
    TkNegacion      shift and go to state 26
    TkShift         shift and go to state 30
    TkValorAscii    shift and go to state 24
    TkNum           shift and go to state 27
    TkTrue          shift and go to state 25
    TkFalse         shift and go to state 34
    TkCaracter      shift and go to state 29

    exp                            shift and go to state 31
    operacion                      shift and go to state 28

state 7

    (57) while -> TkWhile . operacion TkHacer cond TkEnd
    (63) operacion -> . TkParAbre operacion TkParCierra
    (64) operacion -> . operacion TkSuma operacion
    (65) operacion -> . operacion TkResta operacion
    (66) operacion -> . operacion TkMult operacion
    (67) operacion -> . operacion TkDiv operacion
    (68) operacion -> . operacion TkMod operacion
    (69) operacion -> . TkId TkPunto TkNum
    (70) operacion -> . TkMenos operacion
    (71) operacion -> . operacion TkMenos operacion
    (72) operacion -> . operacion TkConjuncion operacion
    (73) operacion -> . operacion TkDisyuncion operacion
    (74) operacion -> . operacion TkIgual operacion
    (75) operacion -> . operacion TkDiferente operacion
    (76) operacion -> . TkNegacion operacion
    (77) operacion -> . operacion TkMenor operacion
    (78) operacion -> . operacion TkMenorIgual operacion
    (79) operacion -> . operacion TkMayor operacion
    (80) operacion -> . operacion TkMayorIgual operacion
    (81) operacion -> . operacion TkConcatenacion operacion
    (82) operacion -> . TkShift operacion
    (83) operacion -> . operacion ingresarEnArreglo
    (84) operacion -> . operacion TkSiguienteCar
    (85) operacion -> . operacion TkAnteriorCar
    (86) operacion -> . TkValorAscii operacion
    (87) operacion -> . TkId
    (88) operacion -> . TkNum
    (89) operacion -> . TkTrue
    (90) operacion -> . TkFalse
    (91) operacion -> . TkCaracter

    TkParAbre       shift and go to state 32
    TkId            shift and go to state 33
    TkMenos         shift and go to state 23
    TkNegacion      shift and go to state 26
    TkShift         shift and go to state 30
    TkValorAscii    shift and go to state 24
    TkNum           shift and go to state 27
    TkTrue          shift and go to state 25
    TkFalse         shift and go to state 34
    TkCaracter      shift and go to state 29

    operacion                      shift and go to state 35

state 8

    (51) cond -> TkId . TkAsignacion exp TkPuntoComa
    (52) cond -> TkId . TkAsignacion exp TkPuntoComa cond
    (53) cond -> TkId . ingresarEnArreglo TkAsignacion exp TkPuntoComa
    (54) cond -> TkId . ingresarEnArreglo TkAsignacion exp TkPuntoComa cond
    (34) ingresarEnArreglo -> . TkCorcheteAbre arrayaux TkCorcheteCierra ingresarEnArreglo
    (35) ingresarEnArreglo -> . TkCorcheteAbre arrayaux TkCorcheteCierra

    TkAsignacion    shift and go to state 36
    TkCorcheteAbre  shift and go to state 38

    ingresarEnArreglo              shift and go to state 37

state 9

    (58) for -> TkFor . TkId TkFrom exp TkTo exp TkStep TkNum TkHacer cond TkEnd
    (59) for -> TkFor . TkId TkFrom exp TkTo exp TkHacer cond TkEnd

    TkId            shift and go to state 39


state 10

    (60) read -> TkRead . TkId TkPuntoComa

    TkId            shift and go to state 40


state 11

    (7) start -> TkBegin TkEnd .

    $end            reduce using rule 7 (start -> TkBegin TkEnd .)


state 12

    (46) cond -> TkWith . declaracionVar TkBegin cond TkEnd
    (47) cond -> TkWith . declaracionVar TkBegin TkEnd
    (48) cond -> TkWith . declaracionVar TkBegin cond TkEnd cond
    (49) cond -> TkWith . TkBegin cond TkEnd
    (50) cond -> TkWith . TkBegin TkEnd
    (8) declaracionVar -> . TkVar declaracionId
    (9) declaracionVar -> . TkVar declaracionArray
    (10) declaracionVar -> . TkVar declaracionId declaracionVar
    (11) declaracionVar -> . TkVar declaracionArray declaracionVar

    TkBegin         shift and go to state 41
    TkVar           shift and go to state 19

    declaracionVar                 shift and go to state 42

state 13

    (40) cond -> for . cond
    (41) cond -> for .
    (36) cond -> . if
    (37) cond -> . if cond
    (38) cond -> . while
    (39) cond -> . while cond
    (40) cond -> . for cond
    (41) cond -> . for
    (42) cond -> . read
    (43) cond -> . read cond
    (44) cond -> . print
    (45) cond -> . print cond
    (46) cond -> . TkWith declaracionVar TkBegin cond TkEnd
    (47) cond -> . TkWith declaracionVar TkBegin TkEnd
    (48) cond -> . TkWith declaracionVar TkBegin cond TkEnd cond
    (49) cond -> . TkWith TkBegin cond TkEnd
    (50) cond -> . TkWith TkBegin TkEnd
    (51) cond -> . TkId TkAsignacion exp TkPuntoComa
    (52) cond -> . TkId TkAsignacion exp TkPuntoComa cond
    (53) cond -> . TkId ingresarEnArreglo TkAsignacion exp TkPuntoComa
    (54) cond -> . TkId ingresarEnArreglo TkAsignacion exp TkPuntoComa cond
    (55) if -> . TkIf operacion TkHacer cond TkOtherwise TkHacer cond TkEnd
    (56) if -> . TkIf operacion TkHacer cond TkEnd
    (57) while -> . TkWhile operacion TkHacer cond TkEnd
    (58) for -> . TkFor TkId TkFrom exp TkTo exp TkStep TkNum TkHacer cond TkEnd
    (59) for -> . TkFor TkId TkFrom exp TkTo exp TkHacer cond TkEnd
    (60) read -> . TkRead TkId TkPuntoComa
    (61) print -> . TkPrint exp TkPuntoComa

    TkEnd           reduce using rule 41 (cond -> for .)
    TkOtherwise     reduce using rule 41 (cond -> for .)
    TkWith          shift and go to state 12
    TkId            shift and go to state 8
    TkIf            shift and go to state 16
    TkWhile         shift and go to state 7
    TkFor           shift and go to state 9
    TkRead          shift and go to state 10
    TkPrint         shift and go to state 6

    for                            shift and go to state 13
    if                             shift and go to state 14
    cond                           shift and go to state 43
    read                           shift and go to state 15
    print                          shift and go to state 17
    while                          shift and go to state 18

state 14

    (36) cond -> if .
    (37) cond -> if . cond
    (36) cond -> . if
    (37) cond -> . if cond
    (38) cond -> . while
    (39) cond -> . while cond
    (40) cond -> . for cond
    (41) cond -> . for
    (42) cond -> . read
    (43) cond -> . read cond
    (44) cond -> . print
    (45) cond -> . print cond
    (46) cond -> . TkWith declaracionVar TkBegin cond TkEnd
    (47) cond -> . TkWith declaracionVar TkBegin TkEnd
    (48) cond -> . TkWith declaracionVar TkBegin cond TkEnd cond
    (49) cond -> . TkWith TkBegin cond TkEnd
    (50) cond -> . TkWith TkBegin TkEnd
    (51) cond -> . TkId TkAsignacion exp TkPuntoComa
    (52) cond -> . TkId TkAsignacion exp TkPuntoComa cond
    (53) cond -> . TkId ingresarEnArreglo TkAsignacion exp TkPuntoComa
    (54) cond -> . TkId ingresarEnArreglo TkAsignacion exp TkPuntoComa cond
    (55) if -> . TkIf operacion TkHacer cond TkOtherwise TkHacer cond TkEnd
    (56) if -> . TkIf operacion TkHacer cond TkEnd
    (57) while -> . TkWhile operacion TkHacer cond TkEnd
    (58) for -> . TkFor TkId TkFrom exp TkTo exp TkStep TkNum TkHacer cond TkEnd
    (59) for -> . TkFor TkId TkFrom exp TkTo exp TkHacer cond TkEnd
    (60) read -> . TkRead TkId TkPuntoComa
    (61) print -> . TkPrint exp TkPuntoComa

    TkEnd           reduce using rule 36 (cond -> if .)
    TkOtherwise     reduce using rule 36 (cond -> if .)
    TkWith          shift and go to state 12
    TkId            shift and go to state 8
    TkIf            shift and go to state 16
    TkWhile         shift and go to state 7
    TkFor           shift and go to state 9
    TkRead          shift and go to state 10
    TkPrint         shift and go to state 6

    cond                           shift and go to state 44
    if                             shift and go to state 14
    for                            shift and go to state 13
    read                           shift and go to state 15
    print                          shift and go to state 17
    while                          shift and go to state 18

state 15

    (42) cond -> read .
    (43) cond -> read . cond
    (36) cond -> . if
    (37) cond -> . if cond
    (38) cond -> . while
    (39) cond -> . while cond
    (40) cond -> . for cond
    (41) cond -> . for
    (42) cond -> . read
    (43) cond -> . read cond
    (44) cond -> . print
    (45) cond -> . print cond
    (46) cond -> . TkWith declaracionVar TkBegin cond TkEnd
    (47) cond -> . TkWith declaracionVar TkBegin TkEnd
    (48) cond -> . TkWith declaracionVar TkBegin cond TkEnd cond
    (49) cond -> . TkWith TkBegin cond TkEnd
    (50) cond -> . TkWith TkBegin TkEnd
    (51) cond -> . TkId TkAsignacion exp TkPuntoComa
    (52) cond -> . TkId TkAsignacion exp TkPuntoComa cond
    (53) cond -> . TkId ingresarEnArreglo TkAsignacion exp TkPuntoComa
    (54) cond -> . TkId ingresarEnArreglo TkAsignacion exp TkPuntoComa cond
    (55) if -> . TkIf operacion TkHacer cond TkOtherwise TkHacer cond TkEnd
    (56) if -> . TkIf operacion TkHacer cond TkEnd
    (57) while -> . TkWhile operacion TkHacer cond TkEnd
    (58) for -> . TkFor TkId TkFrom exp TkTo exp TkStep TkNum TkHacer cond TkEnd
    (59) for -> . TkFor TkId TkFrom exp TkTo exp TkHacer cond TkEnd
    (60) read -> . TkRead TkId TkPuntoComa
    (61) print -> . TkPrint exp TkPuntoComa

    TkEnd           reduce using rule 42 (cond -> read .)
    TkOtherwise     reduce using rule 42 (cond -> read .)
    TkWith          shift and go to state 12
    TkId            shift and go to state 8
    TkIf            shift and go to state 16
    TkWhile         shift and go to state 7
    TkFor           shift and go to state 9
    TkRead          shift and go to state 10
    TkPrint         shift and go to state 6

    for                            shift and go to state 13
    if                             shift and go to state 14
    cond                           shift and go to state 45
    read                           shift and go to state 15
    print                          shift and go to state 17
    while                          shift and go to state 18

state 16

    (55) if -> TkIf . operacion TkHacer cond TkOtherwise TkHacer cond TkEnd
    (56) if -> TkIf . operacion TkHacer cond TkEnd
    (63) operacion -> . TkParAbre operacion TkParCierra
    (64) operacion -> . operacion TkSuma operacion
    (65) operacion -> . operacion TkResta operacion
    (66) operacion -> . operacion TkMult operacion
    (67) operacion -> . operacion TkDiv operacion
    (68) operacion -> . operacion TkMod operacion
    (69) operacion -> . TkId TkPunto TkNum
    (70) operacion -> . TkMenos operacion
    (71) operacion -> . operacion TkMenos operacion
    (72) operacion -> . operacion TkConjuncion operacion
    (73) operacion -> . operacion TkDisyuncion operacion
    (74) operacion -> . operacion TkIgual operacion
    (75) operacion -> . operacion TkDiferente operacion
    (76) operacion -> . TkNegacion operacion
    (77) operacion -> . operacion TkMenor operacion
    (78) operacion -> . operacion TkMenorIgual operacion
    (79) operacion -> . operacion TkMayor operacion
    (80) operacion -> . operacion TkMayorIgual operacion
    (81) operacion -> . operacion TkConcatenacion operacion
    (82) operacion -> . TkShift operacion
    (83) operacion -> . operacion ingresarEnArreglo
    (84) operacion -> . operacion TkSiguienteCar
    (85) operacion -> . operacion TkAnteriorCar
    (86) operacion -> . TkValorAscii operacion
    (87) operacion -> . TkId
    (88) operacion -> . TkNum
    (89) operacion -> . TkTrue
    (90) operacion -> . TkFalse
    (91) operacion -> . TkCaracter

    TkParAbre       shift and go to state 32
    TkId            shift and go to state 33
    TkMenos         shift and go to state 23
    TkNegacion      shift and go to state 26
    TkShift         shift and go to state 30
    TkValorAscii    shift and go to state 24
    TkNum           shift and go to state 27
    TkTrue          shift and go to state 25
    TkFalse         shift and go to state 34
    TkCaracter      shift and go to state 29

    operacion                      shift and go to state 46

state 17

    (44) cond -> print .
    (45) cond -> print . cond
    (36) cond -> . if
    (37) cond -> . if cond
    (38) cond -> . while
    (39) cond -> . while cond
    (40) cond -> . for cond
    (41) cond -> . for
    (42) cond -> . read
    (43) cond -> . read cond
    (44) cond -> . print
    (45) cond -> . print cond
    (46) cond -> . TkWith declaracionVar TkBegin cond TkEnd
    (47) cond -> . TkWith declaracionVar TkBegin TkEnd
    (48) cond -> . TkWith declaracionVar TkBegin cond TkEnd cond
    (49) cond -> . TkWith TkBegin cond TkEnd
    (50) cond -> . TkWith TkBegin TkEnd
    (51) cond -> . TkId TkAsignacion exp TkPuntoComa
    (52) cond -> . TkId TkAsignacion exp TkPuntoComa cond
    (53) cond -> . TkId ingresarEnArreglo TkAsignacion exp TkPuntoComa
    (54) cond -> . TkId ingresarEnArreglo TkAsignacion exp TkPuntoComa cond
    (55) if -> . TkIf operacion TkHacer cond TkOtherwise TkHacer cond TkEnd
    (56) if -> . TkIf operacion TkHacer cond TkEnd
    (57) while -> . TkWhile operacion TkHacer cond TkEnd
    (58) for -> . TkFor TkId TkFrom exp TkTo exp TkStep TkNum TkHacer cond TkEnd
    (59) for -> . TkFor TkId TkFrom exp TkTo exp TkHacer cond TkEnd
    (60) read -> . TkRead TkId TkPuntoComa
    (61) print -> . TkPrint exp TkPuntoComa

    TkEnd           reduce using rule 44 (cond -> print .)
    TkOtherwise     reduce using rule 44 (cond -> print .)
    TkWith          shift and go to state 12
    TkId            shift and go to state 8
    TkIf            shift and go to state 16
    TkWhile         shift and go to state 7
    TkFor           shift and go to state 9
    TkRead          shift and go to state 10
    TkPrint         shift and go to state 6

    cond                           shift and go to state 47
    if                             shift and go to state 14
    for                            shift and go to state 13
    read                           shift and go to state 15
    print                          shift and go to state 17
    while                          shift and go to state 18

state 18

    (38) cond -> while .
    (39) cond -> while . cond
    (36) cond -> . if
    (37) cond -> . if cond
    (38) cond -> . while
    (39) cond -> . while cond
    (40) cond -> . for cond
    (41) cond -> . for
    (42) cond -> . read
    (43) cond -> . read cond
    (44) cond -> . print
    (45) cond -> . print cond
    (46) cond -> . TkWith declaracionVar TkBegin cond TkEnd
    (47) cond -> . TkWith declaracionVar TkBegin TkEnd
    (48) cond -> . TkWith declaracionVar TkBegin cond TkEnd cond
    (49) cond -> . TkWith TkBegin cond TkEnd
    (50) cond -> . TkWith TkBegin TkEnd
    (51) cond -> . TkId TkAsignacion exp TkPuntoComa
    (52) cond -> . TkId TkAsignacion exp TkPuntoComa cond
    (53) cond -> . TkId ingresarEnArreglo TkAsignacion exp TkPuntoComa
    (54) cond -> . TkId ingresarEnArreglo TkAsignacion exp TkPuntoComa cond
    (55) if -> . TkIf operacion TkHacer cond TkOtherwise TkHacer cond TkEnd
    (56) if -> . TkIf operacion TkHacer cond TkEnd
    (57) while -> . TkWhile operacion TkHacer cond TkEnd
    (58) for -> . TkFor TkId TkFrom exp TkTo exp TkStep TkNum TkHacer cond TkEnd
    (59) for -> . TkFor TkId TkFrom exp TkTo exp TkHacer cond TkEnd
    (60) read -> . TkRead TkId TkPuntoComa
    (61) print -> . TkPrint exp TkPuntoComa

    TkEnd           reduce using rule 38 (cond -> while .)
    TkOtherwise     reduce using rule 38 (cond -> while .)
    TkWith          shift and go to state 12
    TkId            shift and go to state 8
    TkIf            shift and go to state 16
    TkWhile         shift and go to state 7
    TkFor           shift and go to state 9
    TkRead          shift and go to state 10
    TkPrint         shift and go to state 6

    cond                           shift and go to state 48
    if                             shift and go to state 14
    for                            shift and go to state 13
    read                           shift and go to state 15
    print                          shift and go to state 17
    while                          shift and go to state 18

state 19

    (8) declaracionVar -> TkVar . declaracionId
    (9) declaracionVar -> TkVar . declaracionArray
    (10) declaracionVar -> TkVar . declaracionId declaracionVar
    (11) declaracionVar -> TkVar . declaracionArray declaracionVar
    (12) declaracionId -> . TkId TkComa declaracionId
    (13) declaracionId -> . declaracionIdNum
    (14) declaracionId -> . declaracionIdBool
    (15) declaracionId -> . declaracionIdChar
    (27) declaracionArray -> . TkId TkComa declaracionArray
    (28) declaracionArray -> . TkId TkDosPuntos TkArray TkCorcheteAbre TkNum TkCorcheteCierra TkOf type
    (16) declaracionIdNum -> . TkId TkAsignacion TkNum TkComa declaracionIdNum
    (17) declaracionIdNum -> . TkId TkAsignacion TkNum TkDosPuntos TkInt
    (18) declaracionIdNum -> . TkId TkDosPuntos TkInt
    (22) declaracionIdBool -> . TkId TkAsignacion TkTrue TkComa declaracionIdBool
    (23) declaracionIdBool -> . TkId TkAsignacion TkTrue TkDosPuntos TkBool
    (24) declaracionIdBool -> . TkId TkAsignacion TkFalse TkComa declaracionIdBool
    (25) declaracionIdBool -> . TkId TkAsignacion TkFalse TkDosPuntos TkBool
    (26) declaracionIdBool -> . TkId TkDosPuntos TkBool
    (19) declaracionIdChar -> . TkId TkAsignacion TkCaracter TkComa declaracionIdChar
    (20) declaracionIdChar -> . TkId TkAsignacion TkCaracter TkDosPuntos TkChar
    (21) declaracionIdChar -> . TkId TkDosPuntos TkChar

    TkId            shift and go to state 54

    declaracionIdNum               shift and go to state 53
    declaracionArray               shift and go to state 51
    declaracionIdChar              shift and go to state 50
    declaracionIdBool              shift and go to state 49
    declaracionId                  shift and go to state 52

state 20

    (5) start -> TkWith TkBegin . TkEnd
    (6) start -> TkWith TkBegin . cond TkEnd
    (36) cond -> . if
    (37) cond -> . if cond
    (38) cond -> . while
    (39) cond -> . while cond
    (40) cond -> . for cond
    (41) cond -> . for
    (42) cond -> . read
    (43) cond -> . read cond
    (44) cond -> . print
    (45) cond -> . print cond
    (46) cond -> . TkWith declaracionVar TkBegin cond TkEnd
    (47) cond -> . TkWith declaracionVar TkBegin TkEnd
    (48) cond -> . TkWith declaracionVar TkBegin cond TkEnd cond
    (49) cond -> . TkWith TkBegin cond TkEnd
    (50) cond -> . TkWith TkBegin TkEnd
    (51) cond -> . TkId TkAsignacion exp TkPuntoComa
    (52) cond -> . TkId TkAsignacion exp TkPuntoComa cond
    (53) cond -> . TkId ingresarEnArreglo TkAsignacion exp TkPuntoComa
    (54) cond -> . TkId ingresarEnArreglo TkAsignacion exp TkPuntoComa cond
    (55) if -> . TkIf operacion TkHacer cond TkOtherwise TkHacer cond TkEnd
    (56) if -> . TkIf operacion TkHacer cond TkEnd
    (57) while -> . TkWhile operacion TkHacer cond TkEnd
    (58) for -> . TkFor TkId TkFrom exp TkTo exp TkStep TkNum TkHacer cond TkEnd
    (59) for -> . TkFor TkId TkFrom exp TkTo exp TkHacer cond TkEnd
    (60) read -> . TkRead TkId TkPuntoComa
    (61) print -> . TkPrint exp TkPuntoComa

    TkEnd           shift and go to state 56
    TkWith          shift and go to state 12
    TkId            shift and go to state 8
    TkIf            shift and go to state 16
    TkWhile         shift and go to state 7
    TkFor           shift and go to state 9
    TkRead          shift and go to state 10
    TkPrint         shift and go to state 6

    cond                           shift and go to state 55
    if                             shift and go to state 14
    for                            shift and go to state 13
    read                           shift and go to state 15
    print                          shift and go to state 17
    while                          shift and go to state 18

state 21

    (2) start -> TkWith declaracionVar . TkBegin cond TkEnd
    (4) start -> TkWith declaracionVar . TkBegin TkEnd

    TkBegin         shift and go to state 57


state 22

    (3) start -> TkBegin cond TkEnd .
